# dice-roller

./: .gitignore  .prettierignore  Dockerfile  README.md  Taskfile.yaml  package-lock.json  package.json  pyproject.toml
.github/workflows/: check-pr.yaml  release.yaml
.scripts/bash/: environment_activate
.scripts/secrets/: local.yaml
dice_roller/: __init__.py
dice_roller/expressions/: __init__.py  base.py  constant.py  dice.py  dice_group.py  multiplication.py  repeated.py  sum.py
dice_roller/histograms/: __init__.py  models.py
dice_roller/histograms/renderer/: __init__.py  base.py  plotly.py  text.py
dice_roller/parsers/: __init__.py  exceptions.py
dice_roller/parsers/dice_group/: __init__.py  lexers.py  parser.py  tokens.py
dice_roller/parsers/expression/: __init__.py  lexers.py  parser.py  tokens.py
dice_roller/results/: __init__.py  models.py
dice_roller/results/renderer/: __init__.py  base.py  detailed.py  total_value.py
dice_roller/telegram/: __init__.py  app.py
tests/: conftest.py  settings.py
tests/unit/expressions/: conftest.py  test_constant.py  test_dice.py  test_dice_group.py  test_multiplication.py  test_repeated.py  test_sum.py
tests/unit/histograms/renderer/: test_text.py
tests/unit/histograms/renderer/plotly/: test_plotly.py
tests/unit/parsers/dice_group/: test_lexers.py
tests/unit/parsers/dice_group/parser/: test_dice_group_parser.py  test_parse_dice_group.py
tests/unit/parsers/expression/: test_lexers.py
tests/unit/parsers/expression/parser/: test_expression_parser.py  test_parse_expression.py
tests/unit/results/renderer/: test_detailed.py  test_total_value.py
