[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.coverage.report]
exclude_lines = [
  "@(abc\\.)?abstractmethod",
  "class .*Protocol\\):",
  "def __repr__",
  "if __name__ == .__main__.:",
  "if typing.TYPE_CHECKING:",
  "pragma: no cover",
  "raise NotImplementedError",
]

[tool.coverage.run]
include = ["dice_roller/*"]

[tool.deptry.per_rule_ignores]
DEP002 = ["kaleido"]

[tool.isort]
known_first_party = ["dice_roller", "tests"]
line_length = 120
profile = "black"
py_version = 312

[tool.poetry]
authors = ["ovsds <github@ovsds.ru>"]
description = "Dice Roller"
license = "MIT"
name = "dice-roller"
packages = [
  {include = "dice_roller"},
]
readme = "README.md"
repository = "https://github.com/ovsds/dice-roller"
version = "0.0.1"

[tool.poetry.dependencies]
click = "^8.1.7"
kaleido = {optional = true, version = "0.2.1"}
plotly = {optional = true, version = "^5.24.1"}
python = "~3.12"
typing-extensions = "^4.12.2"

[tool.poetry.extras]
plotly = ["kaleido", "plotly"]

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
black = "24.3.0"
coverage = "7.4.4"
deptry = "^0.18.0"
pydantic-settings = "^2.5.2"
pytest = "8.1.1"
pytest-mock = "3.14.0"
ruff = "0.3.4"
sort-all = "1.2.0"
toml-sort = "0.23.1"

[tool.poetry.scripts]
dice-roller = "dice_roller.bin.main:main"

[tool.pyright]
exclude = [
  "**/__pycache__",
]
include = [
  "dice_roller",
  "tests",
]
pythonPlatform = "All"
pythonVersion = "3.12"
reportConstantRedefinition = "none"
reportMissingTypeStubs = "none"
reportPrivateUsage = "information"
reportPropertyTypeMismatch = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnknownMemberType = "none"
reportUnnecessaryTypeIgnoreComment = "warning"
reportUntypedFunctionDecorator = "warning"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
venv = ".venv"
venvPath = '.'

[tool.pytest.ini_options]
log_cli = true
log_level = "WARNING"
pythonpath = "."

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
extend-select = [
  "I", # isort
  "UP", # pyupgrade
]
ignore = [
  "F403", # 'from modle import *' used; unable to detect undefined names
  "F405", # 'from module import *' used; unable to detect undefined names
]

[tool.tomlsort]
all = true
ignore_case = true
in_place = true
trailing_comma_inline_array = true
